# MagmaStone

./: CMakeLists.txt  README.md  main.cpp
shaders/: shader.vert  vert.spv
